[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/fonts/IBM_Plex_Sans/IBMPlexSans-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/images/run.png" type="Texture" id=2]
[ext_resource path="res://Resources/images/arrows.png" type="Texture" id=3]
[ext_resource path="res://Resources/images/pause.png" type="Texture" id=4]
[ext_resource path="res://Resources/images/bg.png" type="Texture" id=5]
[ext_resource path="res://Resources/fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Src/Components/HUD/HUD.gd" type="Script" id=7]
[ext_resource path="res://Resources/images/acorn.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.956863, 0.882353, 0.760784, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.341176, 0.145098, 0.231373, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.721569, 0.494118, 0.411765, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 6 )

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="."]
margin_left = 50.0
margin_top = 25.0
margin_right = 304.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Time Left: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="TimeLeft"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "00"

[node name="AcornsCount" type="Label" parent="."]
margin_left = 50.0
margin_top = 75.0
margin_right = 304.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Acorns:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="AcornsCount"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "00"

[node name="DayCount" type="Label" parent="."]
margin_left = 50.0
margin_top = 125.0
margin_right = 304.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
text = "Day:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="DayCount"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "00"

[node name="Speed" type="TextureRect" parent="."]
margin_left = 378.0
margin_top = 30.0
margin_right = 485.0
margin_bottom = 105.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="TextureRect" parent="Speed"]
modulate = Color( 0, 1, 0.129412, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 48.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 24, 24 )
texture = ExtResource( 3 )

[node name="Half" type="TextureRect" parent="Speed"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -48.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 24, 24 )
texture = ExtResource( 3 )

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -124.0
margin_top = 20.0
margin_right = -28.0
margin_bottom = 116.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 1, 0.803922, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausebg" type="TextureRect" parent="PauseMenu"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -40.0
margin_right = 125.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 80 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HasAcorn" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 36.5826
margin_top = 26.9391
margin_right = 111.583
margin_bottom = 101.939
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
